# general-tools

./: .gitignore  README.md
ai-log-sync/: .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  setup.py  setup.sh
ai-log-sync/reference/: README.md  conversation_parser.py  (+1 more)
dotfiles/: README.md  bashrc  setup.sh
env-sync/: .gitignore  .gitleaks.toml  README.md  install.sh  secrets.yaml.age  tools.yaml  uninstall.sh
filedetective/: CLAUDE.md  README.md  config.yaml  filedet-v0.2-spec-plan.md  filedet.py  filedetective-design-and-impl-plan.md  pyproject.toml  requirements.txt  temp_fixes.txt
filedetective/analyzers/: base_analyzer.py  javascript_analyzer.py  markdown_analyzer.py  python_analyzer.py  text_analyzer.py
filedetective/core/: file_analyzer.py  file_finder.py  git_utils.py  history.py  tokenizer.py
filedetective/docs/handoffs/: 250109-1345_filedet-hist-complete.md  250109-2200_hist-table-display-wip.md  251211-1620_hist-table-display-resolved.md
filedetective/filedetective/: __init__.py  __main__.py  cli.py  config.yaml
filedetective/filedetective/analyzers/: base_analyzer.py  javascript_analyzer.py  markdown_analyzer.py  python_analyzer.py  text_analyzer.py
filedetective/filedetective/core/: file_analyzer.py  file_finder.py  history.py
filedetective/filedetective/utils/: display.py  file_utils.py
filedetective/tests/: test_file_analyzer.py
filedetective/tests/fixtures/: sample.js  sample.md  sample.py  sample.toml  sample.ts  sample.xml  sample.yaml
filedetective/utils/: display.py
muse-backup/: IMPLEMENTATION_SUMMARY.md
(+71 files in other folders)
