[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filedetective"
version = "0.2.0"
description = "Intelligent file discovery and analysis CLI tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Kyle"}
]

dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
tokens = [
    "tiktoken>=0.5.0",  # For accurate token counting (has fallback without)
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
filedet = "filedetective.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["filedetective*"]

[tool.setuptools.package-data]
filedetective = ["config.yaml"]
